# jagger-python

./: .gitignore  CMakeLists.txt  README.org  flake.nix
cpp_cli/: jagger-app.cc
jagger/: jagger.h  python-binding-jagger.cc
